# ukr-dialects

./: README.md  app (1).py  app.py  gitignore (1).txt  index.html  prepared_corpus.txt  pyproject.toml
templates/: index.html
